tests/errors/syn_cases2.java
public class syn_cases2 {
public static void main(String[] args){
switch(args.length){
53 break;
}
}
}